About no longer misaligned

--- a/app/static/CSS/index.css
+++ b/app/static/CSS/index.css
@@ -279,6 +279,10 @@
     margin-right: auto;
 }
 
+.about h1 {
+    padding: 0 2rem;
+}
+
 .about p {
     font-size: 2rem;
     padding: 2rem;
